--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,18 @@
   <groupId>com.dnsun</groupId>
   <version>0.0.1-SNAPSHOT</version>
   <artifactId>file-search</artifactId>
+  
+  <dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.11</version>
+		<scope>test</scope>
+	</dependency>
+  	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId> 
+		<version>2.4</version>
+	</dependency>
+  </dependencies>
 </project>
