--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.dnsun</groupId>
-  <version>0.0.1-SNAPSHOT</version>
-  <artifactId>file-search</artifactId>
-  
-  <dependencies>
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.11</version>
-		<scope>test</scope>
-	</dependency>
-  	<dependency>
-		<groupId>commons-io</groupId>
-		<artifactId>commons-io</artifactId> 
-		<version>2.4</version>
-	</dependency>
-  </dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.dnsun</groupId>
+	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>file-search</artifactId>
+ 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	  	<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId> 
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
+	</dependencies>
 </project>
