--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,8 @@
 	<groupId>com.dnsun</groupId>
 	<version>0.0.1-SNAPSHOT</version>
 	<artifactId>file-search</artifactId>
+	<packaging>jar</packaging>
+	
  	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -21,4 +23,21 @@
 			<version>1.2</version>
 		</dependency>
 	</dependencies>
+	<build>
+	  <plugins>
+	    <plugin>
+	      <artifactId>maven-assembly-plugin</artifactId>
+	      <configuration>
+	        <archive>
+	          <manifest>
+	            <mainClass>com.dnsun.filesearch.FileSearch</mainClass>
+	          </manifest>
+	        </archive>
+	        <descriptorRefs>
+	          <descriptorRef>jar-with-dependencies</descriptorRef>
+	        </descriptorRefs>
+	      </configuration>
+	    </plugin>
+	  </plugins>
+	</build>
 </project>
